--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<HTML>
+<html lang="es">
 
-<HEAD>
+  <head>
 
 <TITLE>LookCraft</TITLE>
 
@@ -11,9 +11,20 @@
 
 <P> mc.lookcraft.xyz - play.lookcraft.xyz
 
-<H2>Discord y tienda</H2>
-
-<P> lookcraft.xyz/discord - lookcraft.xyz/tienda
+      <nav>
+        <ul class="nav-links">
+          <li>
+            <a href="https://strixmc.com/tienda">
+              <i class="fas fa-shopping-cart" id="icon"></i>
+              Tienda
+            </a>
+            <a href="https://strixmc.com/discord"
+              ><i class="fab fa-discord" id="icon"></i> Discord
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
 
 </BODY>
