--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <nav>
         <ul class="nav-links">
           <li>
-            <a href="https://strixmc.com/tienda">
+            <a href="https://lookcraft.xyz/tienda">
               <i class="fas fa-shopping-cart" id="icon"></i>
               Tienda
             </a>
-            <a href="https://strixmc.com/discord"
+            <a href="https://lookcraft.xyz/discord"
               ><i class="fab fa-discord" id="icon"></i> Discord
             </a>
           </li>
