--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         <figure class="image is-64x64">
           <img src="img/logo.png" class="is-rounded" />
         </figure>
-        <a href="" class="logo"> StrixMC </a>
+        <a href="" class="logo"> LookCraft </a>
       </div>
 
       <nav>
         <ul class="nav-links">
           <li>
-            <a href="https://strixmc.com/tienda">
+            <a href="https://lookcraft.xyz/tienda">
               <i class="fas fa-shopping-cart" id="icon"></i>
               Tienda
             </a>
-            <a href="https://strixmc.com/discord"
+            <a href="https://lookcraft.xyz/discord"
               ><i class="fab fa-discord" id="icon"></i> Discord
             </a>
           </li>
@@ -44,7 +44,7 @@
         <div class="container">
           <div class="columns">
             <div class="column m-columns">
-              <p class="title is-3">StrixMC Network</p>
+              <p class="title is-3">LookCraft</p>
               <p class="subtitle is-6">
                 Repellendus repudiandae ut dolor nihil dolores amet suscipit
                 quam? Et dolorum voluptatum impedit corporis perferendis est
