--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ"
       src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
     ></script>
-    <title>StrixMC</title>
+    <title>LookCraft | Pagina Oficial</title>
   </head>
   <body>
     <header>
