--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ"
       src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
     ></script>
-    <title>LookCraft | Pagina Oficial</title>
+    <title>LookCraft</title>
   </head>
   <body>
     <header>
@@ -46,9 +46,7 @@
             <div class="column m-columns">
               <p class="title is-3">LookCraft</p>
               <p class="subtitle is-6">
-                Repellendus repudiandae ut dolor nihil dolores amet suscipit
-                quam? Et dolorum voluptatum impedit corporis perferendis est
-                voluptas fuga, quia, aperiam ex fugiat.
+                Somos un servidor nuevo
               </p>
               <button class="button is-white">
                 <i class="far fa-clipboard"> </i>
