--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
       </p>
     </section>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
-    const crate = new Crate({
-      server: '769399360978944031', // 🦉StrixMC
-      channel: '805808677520277535' // #📖┊⸢general⸥
-    })
-    crate.notify('Nuestro discord!')
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '769399360978944031', // LookCraft | Discord Oficial
+    channel: '805808677520277535' // #»┇💬┇chat-general
+  })
+</script>
 </html>
