--- a/config.html
+++ b/config.html
@@ -14,17 +14,17 @@ All rights reserved ® 2019
 
 <?php
 
-$siteTitle = "MC-Market Minecraft Server";
+$siteTitle = "LookCraft";
 $favicon = "https://gamepedia.cursecdn.com/minecraft_gamepedia/4/44/Grass_Block_Revision_6.png";
 $backgroundImage = "https://i.imgur.com/xbfQ5QQ.jpg";
-$logoImage = "https://gamepedia.cursecdn.com/minecraft_gamepedia/4/44/Grass_Block_Revision_6.png";
-$mainLogo = "https://visage.surgeplay.com/bust/99cb3d7ff8e64a0da6a2d4736d11a19b";
+$logoImage = "https://i.imgur.com/YGJRJKC.jpg";
+$mainLogo = "https://i.imgur.com/lRKzu3k.jpg";
 $linkHome = "#";
 $linkPunishments = "/punishments";
 $linkStore = "/store";
 $linkTwitter = "/twitter";
 $linkDiscord = "/discord";
 $serverName = "MC-Market";
-$serverIp = "mc.hypixel.net";
+$serverIp = "play.lookcraft.xyz";
 $serverCopyright = "MC-Market";
  ?>
