--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ All rights reserved ® 2019
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="<?php print $favicon; ?>" type="image/x-icon"/>
-    <title><?php print $siteTitle; ?></title>
+    <title>LookCraft | Pagina Oficial</title>
     <link rel="stylesheet" href="css/bulma.css">
      <script src="bulma-toast.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
@@ -64,11 +64,11 @@ All rights reserved ® 2019
                     </span>
                     <span>PUNISHMENTS</span>
                   </a>
-                  <a class="navbar-item" href="<?php print $linkStore; ?>">
+                  <a class="navbar-item" href="https://lookcraft.xyz/tienda">
                     <span class="icon has-text-light">
                       <i class="fas fa-shopping-cart"></i>
                     </span>
-                    <span>STORE</span>
+                    <span>TIENDA</span>
                   </a>
                   <a class="navbar-item" href="<?php print $linkTwitter; ?>">
                     <span class="icon has-text-light" href="<?php print $linkTwitter; ?>">
@@ -76,7 +76,7 @@ All rights reserved ® 2019
                     </span>
                   </a>
                 <span class="navbar-item">
-                  <a class="button is-light is-rounded is-inverted" href="<?php print $linkDiscord; ?>">
+                  <a class="button is-light is-rounded is-inverted" href="https:/lookcraft.xyz/discord">
                     <span class="icon">
                       <i class="fab fa-discord"></i>
                     </span>
@@ -96,9 +96,9 @@ All rights reserved ® 2019
           <h1 class="title">
             <?php print $serverName; ?>
           </h1>
-          <h2 class="subtitle is-5">There are currently <span data-playercounter-ip="<?php print $serverIp; ?>">0</span> players online</h2>
+          <h2 class="subtitle is-5">There are currently <span data-playercounter-ip="play.lookcraft.xyz">0</span> Jugadores Conectados</h2>
 
-          <a class="button is-secondary is-rounded" id="player-count-button" data-clipboard-text="<?php print $serverIp; ?>">
+          <a class="button is-secondary is-rounded" id="player-count-button" data-clipboard-text="play.lookcraft.xyz">
               <span class="icon is-small">
                 <i class="fas fa-clipboard"></i>
               </span>
