--- a/index.html
+++ b/index.html
@@ -1,154 +1,91 @@
-<!--
-_       __                              __
-| |     / /___  ____  ____  ____ _____ _/ /_
-| | /| / / __ \/ __ \/ __ \/ __ `/ __ `/ __ \
-| |/ |/ / /_/ / /_/ / /_/ / /_/ / /_/ / / / /
-|__/|__/\____/\____/ .___/\__,_/\__,_/_/ /_/
-                 /_/
-
-Made by Tomás Guerra ® http://www.tomasguerra.cl to MC-Market Community
-
-All rights reserved ® 2019
-                                                                          -->
-<?php  include 'config.html';?>
-
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="<?php print $favicon; ?>" type="image/x-icon"/>
-    <title>LookCraft | Pagina Oficial</title>
-    <link rel="stylesheet" href="css/bulma.css">
-     <script src="bulma-toast.min.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <script src="js/bootstrap-notify.js"></script>
-    <script src="js/minecraftApi.js"></script>
-    <link rel="stylesheet" href="src/PNotifyBrightTheme.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <script
+      crossorigin="anonymous"
+      defer
+      integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ"
+      src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
+    ></script>
+    <title>StrixMC</title>
   </head>
   <body>
-    <section class="hero is-success is-fullheight" style="
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-image: url('<?php print $backgroundImage; ?>');
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;">
-      <!-- Hero head: will stick at the top -->
-      <div class="hero-head">
-        <header class="navbar">
-          <div class="container">
-            <div class="navbar-brand">
-              <a class="navbar-item">
-                <img src="<?php print $logoImage; ?>" alt="Logo">
-              </a>
-              <span class="navbar-burger burger" data-target="navbarMenuHeroC">
-                <span></span>
-                <span></span>
-                <span></span>
-              </span>
-            </div>
-            <div id="navbarMenuHeroB" class="navbar-menu">
-              <div class="navbar-end">
-                <a class="navbar-item" href="<?php print $linkHome; ?>">
-                  <span class="icon has-text-light">
-                    <i class="fas fa-home"></i>
-                  </span>
-                  <span>HOME</span>
-                </a>
-                  <a class="navbar-item" href="<?php print $linkPunishments; ?>">
-                    <span class="icon has-text-light">
-                      <i class="fas fa-gavel"></i>
-                    </span>
-                    <span>PUNISHMENTS</span>
-                  </a>
-                  <a class="navbar-item" href="https://lookcraft.xyz/tienda">
-                    <span class="icon has-text-light">
-                      <i class="fas fa-shopping-cart"></i>
-                    </span>
-                    <span>TIENDA</span>
-                  </a>
-                  <a class="navbar-item" href="<?php print $linkTwitter; ?>">
-                    <span class="icon has-text-light" href="<?php print $linkTwitter; ?>">
-                      <i class="fab fa-twitter" href="<?php print $linkTwitter; ?>"></i>
-                    </span>
-                  </a>
-                <span class="navbar-item">
-                  <a class="button is-light is-rounded is-inverted" href="https:/lookcraft.xyz/discord">
-                    <span class="icon">
-                      <i class="fab fa-discord"></i>
-                    </span>
-                    <span>Discord</span>
-                  </a>
-                </span>
-              </div>
-            </div>
-          </div>
-        </header>
+    <header>
+      <div class="branding">
+        <figure class="image is-64x64">
+          <img src="img/logo.png" class="is-rounded" />
+        </figure>
+        <a href="" class="logo"> StrixMC </a>
       </div>
 
-      <!-- Hero content: will be in the middle -->
-      <div class="hero-body">
-        <div class="container has-text-centered">
-          <img src="<?php print $mainLogo; ?>" style="width: 13rem;">
-          <h1 class="title">
-            <?php print $serverName; ?>
-          </h1>
-          <h2 class="subtitle is-5">There are currently <span data-playercounter-ip="play.lookcraft.xyz">0</span> Jugadores Conectados</h2>
-
-          <a class="button is-secondary is-rounded" id="player-count-button" data-clipboard-text="play.lookcraft.xyz">
-              <span class="icon is-small">
-                <i class="fas fa-clipboard"></i>
-              </span>
-              <span><?php print $serverIp; ?></span>
+      <nav>
+        <ul class="nav-links">
+          <li>
+            <a href="https://strixmc.com/tienda">
+              <i class="fas fa-shopping-cart" id="icon"></i>
+              Tienda
             </a>
+            <a href="https://strixmc.com/discord"
+              ><i class="fab fa-discord" id="icon"></i> Discord
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="hero is-small is-dark">
+      <div class="hero-body">
+        <div class="container">
+          <div class="columns">
+            <div class="column m-columns">
+              <p class="title is-3">StrixMC Network</p>
+              <p class="subtitle is-6">
+                Repellendus repudiandae ut dolor nihil dolores amet suscipit
+                quam? Et dolorum voluptatum impedit corporis perferendis est
+                voluptas fuga, quia, aperiam ex fugiat.
+              </p>
+              <button class="button is-white">
+                <i class="far fa-clipboard"> </i>
+                Lorem
+              </button>
+            </div>
+            <div class="column">
+              <figure class="image is-square">
+                <img
+                  src="img/logo-transparent.png"
+                  style="width: 350px; height: 550px"
+                />
+              </figure>
+            </div>
           </div>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
-        <script src="https://unpkg.com/tippy.js@1.2.1/dist/tippy.min.js"></script>
-        <script>
-    var btn = document.getElementById('player-count-button');
-    var clipboard = new Clipboard(btn);
-    clipboard.on('success', function(e) {
-        console.log(e);
-    });
-    clipboard.on('error', function(e) {
-        console.log(e);
-    });
-  </script>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#00fcc6"
+          fill-opacity="1"
+          d="M0,192L80,208C160,224,320,256,480,256C640,256,800,224,960,208C1120,192,1280,192,1360,192L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+        ></path>
+      </svg>
+    </div>
 
-
-  <script>
-  tippy('#player-count-button', {
-    animation: 'scale',
-    position: 'bottom',
-    duration: 500,
-    arrow: true
-  })
-  tippy('#player-head', {
-    animation: 'scale',
-    position: 'bottom',
-    duration: 500,
-    arrow: true
-  })
-  </script>
-  </section>
+    <section>
+      <p>
+        <i class="fas fa-feather-alt" id="feather"></i>
+        Hecho sin tanto cariño. ~Slide.
+      </p>
+    </section>
   </body>
-  <footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong><?php print $serverCopyright ?> ® </strong> website by <a href="http://tomasguerra.cl">ChileanS
-        <span class="icon has-text-danger">
-          <i class="fas fa-heart"></i>
-        </span>
-      </a> 2019.
-    </p>
-  </div>
-</footer>
-
-  <script src="inc/js/popper.min.js"></script>
-  <script src="inc/js/halloween-bats.js?1528006986"></script>
-  <script src="inc/js/jquery.min.js?1522797215"></script>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '769399360978944031', // LookCraft | Discord Oficial
+    channel: '805808677520277535' // #»┇💬┇chat-general
+  })
+</script>
 </html>
