--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ"
       src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
     ></script>
-    <title>StrixMC</title>
+    <title>LookCraft</title>
   </head>
   <body>
     <header>
@@ -21,7 +21,7 @@
         <figure class="image is-64x64">
           <img src="img/logo.png" class="is-rounded" />
         </figure>
-        <a href="" class="logo"> StrixMC </a>
+        <a href="" class="logo"> LookCraftMC </a>
       </div>
 
       <nav>
