--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Made by Tomás Guerra ® http://www.tomasguerra.cl to MC-Market Community
 
 All rights reserved ® 2019
                                                                           -->
-<?php  include 'config.php';?>
+<?html  include 'config.html';?>
 
 <html>
   <head>
