--- a/config.html
+++ b/config.html
@@ -24,7 +24,7 @@ $linkPunishments = "/punishments";
 $linkStore = "https://lookcraft.xyz/tienda";
 $linkTwitter = "/twitter";
 $linkDiscord = "https://lookcraft.xyz/discord";
-$serverName = "MC-Market";
+$serverName = "LookCraftMC";
 $serverIp = "play.lookcraft.xyz";
-$serverCopyright = "MC-Market";
+$serverCopyright = "LookCraftMC";
  ?>
