--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <meta name="description" content="Web site created by liffhy32">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your server name| Official</title>
+    <title>LookCraft | Pagina Oficial</title>
 </head>
 <body>
     <nav id="nav-bar">
         <div class="nav-content">
-            <label id="name-server"> your server name </label>
+            <label id="name-server"> LookCraft </label>
             <ul id="navigation">
-                <li id="player-counter">The are <span data-playercounter-ip="mc.hypixel.net">0</span> <b>players</b> online on the server</li> <br>
+                <li id="player-counter">Hay <span data-playercounter-ip="play.lookcraft.xyz">0</span> <b>jugadores</b> conectados en el servidor</li> <br>
                 <li><i class="fas fa-compass" id="menu" onclick="menu()"></i></li>
                 <li><i class="fas fa-times" id="close" style="display: none;" onclick="Close()"></i></li>
             </ul>
@@ -33,10 +33,8 @@
                 <img src="./v2.png" alt="logo" width="300" height="300"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
                 <ul id="platforms">
                     <h4>Platforms</h4>
-                    <li><a href="#">Discord</a></li>
-                    <li><a href="#">TeamSpeak</a></li>
-                    <li><a href="#">Telegram</a></li>
-                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Discord/a></li>
                 </ul>
             </div>
         </div>
