--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div class="content">
                 <img src="./v2.png" alt="logo" width="300" height="300"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
                 <ul id="platforms">
-                    <h4>Platforms</h4>
+                    <h4>Plataformas</h4>
                     <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Discord/a></li>
+                    <li><a href="#">Discord</a></li>
                 </ul>
             </div>
         </div>
