--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="header">
         <div class="wrapper">
             <div class="content">
-                <img src="./v2.pjg" alt="logo" width="300" height="300"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
+                <img src="./v2.jpg" alt="logo" width="300" height="300"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
                 <ul id="platforms">
                     <h4>Plataformas</h4>
                     <li><a href="#">Tienda</a></li>
