--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <img src="./v2.jpg" alt="logo" width="300" height="300"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
                 <ul id="platforms">
                     <h4>Plataformas</h4>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Discord</a></li>
+                    <li><a href="https://lookcraft.xyz/tienda">Tienda</a></li>
+                    <li><a href="https://lookcraft.xyz/discord">Discord</a></li>
                 </ul>
             </div>
         </div>
