--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <section class="header">
         <div class="wrapper">
             <div class="content">
-                <img src="./v2.png" alt="logo" width="50" height="100"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
-                <ul id="platforms">
+                <img src="./v2.png" alt="logo" width="200" height="500"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
+                <ul id="PLATAFORMAS">
                     <h4>Plataformas</h4>
                     <li><a href="https://lookcraft.xyz/tienda">Tienda</a></li>
                     <li><a href="https://lookcraft.xyz/discord">Discord</a></li>
