--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav id="nav-bar">
         <div class="nav-content">
-            <label id="name-server"> LookCraft </label>
+            <label id="name-server"> LookCraft Server </label>
             <ul id="navigation">
                 <li id="player-counter">Hay <span data-playercounter-ip="play.lookcraft.xyz">0</span> <b>jugadores</b> conectados en el servidor</li> <br>
                 <li><i class="fas fa-compass" id="menu" onclick="menu()"></i></li>
@@ -21,16 +21,15 @@
             </ul>
         </div>
         <ul id="navigation-links" style="display: none;">
-            <li><a href="#">Auditions</a></li> <!-- To add a link insert your https link in href="here" -->
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="https://lookcraft.xyz/tienda">Tienda</a></li>
+            <li><a href="https://lookcraft.xyz/discord">Discord</a></li>
         </ul>
         
     </nav>
     <section class="header">
         <div class="wrapper">
             <div class="content">
-                <img src="./v2.png" alt="logo" width="200" height="500"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
+                <img src="./v2.png" alt="logo" width="300" height="100"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
                 <ul id="PLATAFORMAS">
                     <h4>Plataformas</h4>
                     <li><a href="https://lookcraft.xyz/tienda">Tienda</a></li>
