--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <ul id="navigation-links" style="display: none;">
             <li><a href="https://lookcraft.xyz/tienda">Tienda</a></li>
             <li><a href="https://lookcraft.xyz/discord">Discord</a></li>
+            <li><a href="https://lookcraft.xyz/twitter">Twitter</a></li>
         </ul>
         
     </nav>
