--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <div class="content">
                 <img src="./v2.png" alt="logo" width="300" height="300"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
                 <ul id="plataforms">
-                    <h4>Plataformas</h4>
+                    <h4>PLATAFORMAS</h4>
+                    <h4>↡</h4>
                     <li><a href="https://lookcraft.xyz/tienda">Tienda</a></li>
                     <li><a href="https://lookcraft.xyz/discord">Discord</a></li>
                 </ul>
