--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="wrapper">
             <div class="content">
                 <img src="./v2.png" alt="logo" width="300" height="300"> <!-- To modify the logo src=""// to change the height of your logo change width and height options -->
-                <ul id="plataforms">
+                <ul id="platforms">
                     <h4>PLATAFORMAS</h4>
                     <h4>↡</h4>
                     <li><a href="https://lookcraft.xyz/tienda">Tienda</a></li>
