--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--Change These -->
 
         <!-- Title -->
-        <title>Title of webpage</title>
+        <title>LookCraftMC | Pagina Oficial</title>
         <!--Search Engine Title for site -->
         <meta data-react-helmet="true" property="og:title" content="Title Goes Here">
         <!-- Author Goes Here -->
@@ -19,7 +19,7 @@
         <!--Search Engine Description for site -->
         <meta name="description" content="Description goes here">
         <!-- Fav Icon-->
-        <link rel="icon" href="img/favicon.ico">
+        <link rel="icon" href="img/bg.ico">
 
 
 
@@ -36,7 +36,7 @@
 <div class="head">
     <!--Profile Picture Here-->
     <!-- css class = head img -->
-    <img src="img/placeholder-profile.jpg">
+    <img src="img/aguila.jpg">
 
     <!-- Title Under Image -->
     <h1>Name</h1>
@@ -50,11 +50,11 @@
     <hr>
     </span>
     <!-- Change the Href "#" to "your link"-->
-    <a href="#" class="fa fa-twitter"> Twitter</a>
+    <a href="https://twitter.com/LookcraftS" class="fa fa-twitter"> TWITTER</a>
     <!-- Change the Href "#" to "your link"-->
-    <a href="#" class="fa fa-youtube"> Youtube</a>
+    <a href="https://lookcraft.xyz/tienda" class="fa fa-tienda"> TIENDA</a>
     <!-- Change the Href "#" to "your link"-->
-    <a href="#" class="fa fa-instagram"> Instagram</a>
+    <a href="https://lookcraft.xyz/discord" class="fa fa-discord"> DISCORD</a>
 </div>
 </body>
 </html>
