--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Title -->
         <title>LookCraftMC | Pagina Oficial</title>
         <!--Search Engine Title for site -->
-        <meta data-react-helmet="true" property="og:title" content="Title Goes Here">
+        <meta data-react-helmet="true" property="og:title" content="LookCraftMC">
         <!-- Author Goes Here -->
         <meta name="author" content="Harley P">
         <!--Search Engine Description for site -->
