--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
       integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ"
       src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
     ></script>
-    <title>StrixMC</title>
+    <title>LookCraftMC | Pagina Oficial</title>
   </head>
   <body>
     <header>
       <div class="branding">
         <figure class="image is-64x64">
-          <img src="img/logo.png" class="is-rounded" />
+          <img src="img/aguila.png" class="is-rounded" />
         </figure>
-        <a href="" class="logo"> StrixMC </a>
+        <a href="" class="logo"> LookCraftMC </a>
       </div>
 
       <nav>
         <ul class="nav-links">
           <li>
-            <a href="https://strixmc.com/tienda">
+            <a href="https://lookcraft.xyz/tienda">
               <i class="fas fa-shopping-cart" id="icon"></i>
               Tienda
             </a>
-            <a href="https://strixmc.com/discord"
+            <a href="https://lookcraft.xyz/discord"
               ><i class="fab fa-discord" id="icon"></i> Discord
             </a>
           </li>
@@ -44,7 +44,7 @@
         <div class="container">
           <div class="columns">
             <div class="column m-columns">
-              <p class="title is-3">StrixMC Network</p>
+              <p class="title is-3">LookCraftMC</p>
               <p class="subtitle is-6">
                 Repellendus repudiandae ut dolor nihil dolores amet suscipit
                 quam? Et dolorum voluptatum impedit corporis perferendis est
@@ -58,7 +58,7 @@
             <div class="column">
               <figure class="image is-square">
                 <img
-                  src="img/logo-transparent.png"
+                  src="img/fondo.png"
                   style="width: 350px; height: 550px"
                 />
               </figure>
