--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       </p>
     </section>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
-    const crate = new Crate({
-      server: '733309063160528996', // 🦉StrixMC
-      channel: '733309064691580970' // #📖┊⸢general⸥
-    })
-    crate.notify('Nuestro discord!')
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '769399360978944031', // LookCraftMC | Discord Oficial
+    channel: '805808677520277535' // #»┇💬┇chat-general
+  })
+  crate.notify('Nuestro discord!')
+</script>
 </html>
