--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="branding">
         <figure class="image is-64x64">
-          <img src="img/aguila.png" class="is-rounded" />
+          <img src="img/aguila.jpg" class="is-rounded" />
         </figure>
         <a href="" class="logo"> LookCraftMC </a>
       </div>
@@ -58,7 +58,7 @@
             <div class="column">
               <figure class="image is-square">
                 <img
-                  src="img/fondo.png"
+                  src="img/fondo.jpg"
                   style="width: 350px; height: 550px"
                 />
               </figure>
