--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="branding">
         <figure class="image is-64x64">
-          <img src="img/aguila.jpg" class="is-rounded" />
+          <img src="img/images_1.png" class="is-rounded" />
         </figure>
         <a href="" class="logo"> LookCraftMC </a>
       </div>
