--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="column">
               <figure class="image is-square">
                 <img
-                  src="img/fondo.jpg"
+                  src="img/logolook.png"
                   style="width: 350px; height: 550px"
                 />
               </figure>
