--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
               <figure class="image is-square">
                 <img
                   src="img/logolook.png"
-                  style="width: 350px; height: 550px"
+                  background-image: url('img/logolook.png');
+                  background-repeat: no-repeat;
                 />
               </figure>
             </div>
