--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav>
         <ul class="nav-links">
           <li>
-            <a href="https://lookcraft.xyz/tienda">
+            <a href="https://tienda.lookcraft.xyz">
               <i class="fas fa-shopping-cart" id="icon"></i>
               Tienda
             </a>
@@ -86,6 +86,5 @@
     server: '769399360978944031', // LookCraftMC | Discord Oficial
     channel: '805808677520277535' // #»┇💬┇chat-general
   })
-  crate.notify('Nuestro discord!')
 </script>
 </html>
